// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaceholderConnect PlaceholderConnect is loading 1`] = `
<DocumentFragment>
  <div
    class="sc-dcJsrY aAZry"
  >
    loading
    <div
      class="sc-gsFSXq dsRZYW"
    >
      <div>
        <div
          data-src="no-data.svg"
          src=""
        />
      </div>
    </div>
    <p
      class="sc-fqkvVR cURQuQ sc-iGgWBj gNabdA"
    >
      No 
    </p>
    <button
      class="sc-aXZVg hzGBhO"
      label="Connect Wallet"
      type="button"
    >
       Connect Wallet
    </button>
  </div>
</DocumentFragment>
`;

exports[`PlaceholderConnect PlaceholderConnect is not loading 1`] = `
<DocumentFragment>
  <div
    class="sc-dcJsrY aAZry"
  >
    <div
      class="sc-gsFSXq dsRZYW"
    >
      <div>
        <div
          data-src="no-data.svg"
          src=""
        />
      </div>
    </div>
    <p
      class="sc-fqkvVR cURQuQ sc-iGgWBj gNabdA"
    >
      No 
    </p>
    <button
      class="sc-aXZVg hzGBhO"
      label="Connect Wallet"
      type="button"
    >
       Connect Wallet
    </button>
  </div>
</DocumentFragment>
`;
